--- a/assets/style.css
+++ b/assets/style.css
@@ -1,103 +1,138 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    justify-content: flex-start;
-  }
-  
-  header {
-    padding: 40px;
-    text-align: center;
-    background: #13293d;
-    color: #fff;
-  }
-  
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: #d9dcd6;
+}
+
+header {
+  padding: 15px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #919b50;
+  color: #ffffff;
+}
+
+header h1 {
+  display: inline-block;
+  font-size: 36px;
+}
+
+header h1 .seo {
+  color: #d9dcd6;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #365978;
+  border-bottom: solid #919b50 10px;
+}
+
+nav a {
+  color: #ffffff;
+  padding: 14px 20px;
+  text-decoration: none;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+  font-size: 20px;
+}
+
+nav a:hover {
+  color: #1B2E45;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+  background-image: url("../assets/images/robert-murray-toCqTyxsT4Q-unsplash.jpg");
+  min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+aside {
+  flex: 1;
+  padding: 80px;
+  text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+  font-size: 24px;
+  color: #fff;
+}
+
+div {
+  flex: 4;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+section {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: Georgia, 'Times New Roman', Times, serif, sans-serif;
+  background-color: #1B2E45;
+  color: #ffffff;
+}
+
+section img {
+  max-height: 200px;
+}
+
+section h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
+}
+
+div #contact {
+  height: 150px;
+}
+
+#contact {
+  padding: 30px;
+  clear: both;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-align: center;
+}
+
+#contact h2 {
+  font-size: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  main,
   nav {
-    display: flex;
-    background-color: #d8a47f;
+    flex-direction: column;
   }
-  
-  nav a {
-    color: #13293d;
-    padding: 14px 20px;
-    text-decoration: none;
-    text-align: center;
-  }
-  
-  main {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 1;
-  }
-  
   aside {
-    flex: 1;
-    background-color: #b9c6ae;
-    padding: 80px;
-    text-align: left;
+    order: 1;
   }
-  
-  footer {
-    width: 100%;
-    bottom: 0;
-    padding: 20px;
-    text-align: center;
-    background: #13293d;
-    color: #fff;
-    margin-top: auto;
-  }
-
-  .bio {
-    background-color: #fff;
-    padding: 50px;
-    display:block;
-  }
-
-  .products {
-    flex: 4;
-    background-color: #fff;
-    padding: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
-  }
-
-  /* Added rotation, box-shadow, border-radius */
-  .card {
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 50px;
-    padding: 10px;
-    flex: 0 0 300px;
-    box-shadow: 10px 10px 5px #aaaaaa;
-    margin: 20px;
-  }
-  
-  /* Added border-radius to match the card */
-  .card header {
-    border-radius: 50px 50px 0px 0px;
-    padding: 20px;
-  }
-  
-  .card p {
-    text-align: center;
-  }
-  
-  .card img {
-    width: 100%;
-  }
-  
-  @media screen and (max-width: 768px) {
-    main,
-    nav {
-      flex-direction: column;
-    }
-  }
-  
+}
